Java 11: Replace Stream.toList() by Stream.collect(Collectors.toList())